--- a/CorpusSearch.Test/CorpusSearch.Test.csproj
+++ b/CorpusSearch.Test/CorpusSearch.Test.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CorpusSearch\Codex_API.csproj" />
+    <ProjectReference Include="..\CorpusSearch\CorpusSearch.csproj" />
   </ItemGroup>
 
 </Project>
