chore: rename: Codex_API -> CorpusSearch
Only in the C#, not in the JS

--- a/CorpusSearch/Properties/launchSettings.json
+++ b/CorpusSearch/Properties/launchSettings.json
@@ -15,7 +15,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "Codex_API": {
+    "CorpusSearch": {
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
