chore: rename Codex_API -> CorpusSearch
Javascript

--- a/CorpusSearch/ClientApp/public/manifest.json
+++ b/CorpusSearch/ClientApp/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Codex_API",
-  "name": "Codex_API",
+  "short_name": "CorpusSearch",
+  "name": "CorpusSearch",
   "icons": [
     {
       "src": "favicon.ico",
