--- a/CorpusSearch/ClientApp/package.json
+++ b/CorpusSearch/ClientApp/package.json
@@ -3,29 +3,36 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/eslint-parser": "^7.13.14",
     "@material-ui/core": "^4.11.3",
+    "@popperjs/core": "^2.9.2",
     "bootstrap": "^4.1.3",
     "jquery": "^3.6.0",
-    "merge": "^1.2.1",
+    "merge": "^2.1.1",
     "oidc-client": "^1.9.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.4.1",
+    "react-scripts": "^4.0.3",
     "reactstrap": "^8.4.1",
     "rimraf": "^2.6.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.13.0",
+    "@typescript-eslint/eslint-plugin": "^2.34.0",
+    "@typescript-eslint/parser": "^2.34.0",
     "ajv": "^6.9.1",
     "cross-env": "^5.2.0",
-    "eslint": "^6.8.0",
+    "eslint": "^7.26.0",
     "eslint-config-react-app": "^5.2.0",
     "eslint-plugin-flowtype": "^4.6.0",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.18.3",
+    "eslint-plugin-react-hooks": "^2.5.1",
     "nan": "^2.14.1",
+    "popper.js": "^1.16.1",
     "typescript": "^3.7.5"
   },
   "eslintConfig": {
