--- a/CorpusSearch/ClientApp/package.json
+++ b/CorpusSearch/ClientApp/package.json
@@ -12,6 +12,7 @@
     "oidc-client": "^1.9.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-highlight-words": "^0.17.0",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^4.0.3",
