ci: Add timeout to publish
npm is currently slow, but not that slow

Means I won't burn too many credits when this is private

40m is very generous

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,6 +11,7 @@ jobs:
       NUGET_XMLDOC_MODE: skip
     name: Publish
     runs-on: ubuntu-latest
+    timeout-minutes: 40
     steps:
       - uses: actions/checkout@v2.1.0
       - run: dotnet test
