--- a/CorpusSearch/CorpusSearch.csproj
+++ b/CorpusSearch/CorpusSearch.csproj
@@ -56,6 +56,10 @@
     <None Remove="Resources\ParnellTheHermit.csv" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Views\Shared\" />
+  </ItemGroup>
+
 
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
     <!-- Ensure Node.js is installed -->
