--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -47,7 +47,7 @@ jobs:
         run: ssh -tt david2@209.97.129.212 'cd /var/www/manx-corpus/ && dotnet publish'
 
       - name: Upload Cregeen Dictionary
-        run: ssh -tt david2@209.97.129.212 'cd /var/www/manx-corpus/CorpusSearch/bin/Debug/net5.0/publish/Resources && ./var/www/manx-corpus/.github/scripts/download_cregeen.sh'
+        run: ssh -tt david2@209.97.129.212 'cd /var/www/manx-corpus/CorpusSearch/bin/Debug/net5.0/publish/Resources && /var/www/manx-corpus/.github/scripts/download_cregeen.sh'
         continue-on-error: true
         
       - name: Restart Service
