--- a/CorpusSearch/ClientApp/package.json
+++ b/CorpusSearch/ClientApp/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "dependencies": {
     "@babel/eslint-parser": "^7.13.14",
-    "@material-ui/core": "^4.11.3",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/material": "^5.10.13",
     "@popperjs/core": "^2.9.2",
     "bootstrap": "^4.1.3",
     "jquery": "^3.6.0",
