--- a/CorpusSearch/ClientApp/package.json
+++ b/CorpusSearch/ClientApp/package.json
@@ -23,6 +23,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.13.0",
+    "@types/jest": "^29.2.2",
+    "@types/node": "^18.11.9",
+    "@types/react-dom": "^18.0.8",
+    "@types/react-highlight-words": "^0.16.4",
     "@typescript-eslint/eslint-plugin": "^5.42.1",
     "@typescript-eslint/parser": "^5.42.1",
     "ajv": "^6.9.1",
