--- a/CorpusSearch/ClientApp/public/manifest.json
+++ b/CorpusSearch/ClientApp/public/manifest.json
@@ -6,6 +6,12 @@
       "src": "favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
+    },
+    {
+      "src": "favicon.ico",
+      "sizes": "144x144",
+      "type": "image/png",
+      "purpose": "any"
     }
   ],
   "start_url": "./index.html",
