--- a/CorpusSearch/ClientApp/package.json
+++ b/CorpusSearch/ClientApp/package.json
@@ -19,7 +19,12 @@
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.4.3",
     "reactstrap": "^9.1.5",
-    "rimraf": "^2.6.2"
+    "rimraf": "^2.6.2",
+    "workbox-core": "^6.5.4",
+    "workbox-expiration": "^6.5.4",
+    "workbox-precaching": "^6.5.4",
+    "workbox-routing": "^6.5.4",
+    "workbox-strategies": "^6.5.4"
   },
   "devDependencies": {
     "@babel/core": "^7.13.0",
