--- a/CorpusSearch/ClientApp/public/manifest.json
+++ b/CorpusSearch/ClientApp/public/manifest.json
@@ -14,7 +14,7 @@
       "purpose": "any"
     }
   ],
-  "start_url": "./index.html",
+  "start_url": "./",
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff"
