--- a/CorpusSearch/ClientApp/public/manifest.json
+++ b/CorpusSearch/ClientApp/public/manifest.json
@@ -3,12 +3,12 @@
   "name": "Corpus Search",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "logo.png",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "favicon.ico",
+      "src": "logo.png",
       "sizes": "144x144",
       "type": "image/png",
       "purpose": "any"
