vendor: react-json-component
We want to modify this. based off tutorial:

https://dev.to/baso53/recursive-rendering-in-react-building-a-universal-json-renderer-f59

--- a/CorpusSearch/ClientApp/package.json
+++ b/CorpusSearch/ClientApp/package.json
@@ -8,6 +8,7 @@
     "@emotion/styled": "^11.10.5",
     "@mui/material": "^5.10.13",
     "@popperjs/core": "^2.9.2",
+    "@types/styled-components": "^5.1.26",
     "bootstrap": "^5.2.2",
     "jquery": "^3.6.0",
     "merge": "^2.1.1",
@@ -21,6 +22,7 @@
     "reactstrap": "^8.10.1",
     "rimraf": "^2.6.2",
     "source-map-explorer": "^2.5.3",
+    "styled-components": "^5.3.6",
     "workbox-core": "^6.5.4",
     "workbox-expiration": "^6.5.4",
     "workbox-precaching": "^6.5.4",
