--- a/CorpusSearch/CorpusSearch.csproj
+++ b/CorpusSearch/CorpusSearch.csproj
@@ -57,6 +57,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="ClientApp\vendor" />
     <Folder Include="Views\Shared\" />
   </ItemGroup>
 
