--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -45,10 +45,10 @@ jobs:
         run: ssh -tt david2@209.97.129.212 'cd /var/www/manx-corpus/ && dotnet build'
       
       - name: Publish
-        run: ssh -tt david2@209.97.129.212 'cd /var/www/manx-corpus/ && dotnet publish'
+        run: ssh -tt david2@209.97.129.212 'cd /var/www/manx-corpus/ && dotnet publish --configuration Release'
 
       - name: Upload Cregeen Dictionary
-        run: ssh -tt david2@209.97.129.212 'cd /var/www/manx-corpus/CorpusSearch/bin/Debug/net6.0/publish/Resources && /var/www/manx-corpus/.github/scripts/download_cregeen.sh'
+        run: ssh -tt david2@209.97.129.212 'cd /var/www/manx-corpus/CorpusSearch/bin/Release/net6.0/publish/Resources && /var/www/manx-corpus/.github/scripts/download_cregeen.sh'
         continue-on-error: true
         
       - name: Restart Service
