--- a/CorpusSearch/ClientApp/package.json
+++ b/CorpusSearch/ClientApp/package.json
@@ -9,6 +9,7 @@
     "@mui/material": "^5.10.13",
     "@popperjs/core": "^2.9.2",
     "bootstrap": "^5.2.2",
+    "diff": "^5.1.0",
     "jquery": "^3.6.0",
     "merge": "^2.1.1",
     "oidc-client": "^1.9.0",
@@ -29,6 +30,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.13.0",
+    "@types/diff": "^5.0.2",
     "@types/jest": "^29.2.2",
     "@types/node": "^18.11.9",
     "@types/react-dom": "^18.0.8",
