--- a/CorpusSearch/ClientApp/package.json
+++ b/CorpusSearch/ClientApp/package.json
@@ -19,6 +19,7 @@
     "react-highlight-words": "^0.18.0",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.4.3",
+    "react-youtube": "^10.1.0",
     "reactstrap": "^8.10.1",
     "rimraf": "^2.6.2",
     "source-map-explorer": "^2.5.3",
