--- a/CorpusSearch/ClientApp/package.json
+++ b/CorpusSearch/ClientApp/package.json
@@ -10,6 +10,7 @@
     "@popperjs/core": "^2.9.2",
     "bootstrap": "^5.2.2",
     "diff": "^5.1.0",
+    "if-emoji": "^0.1.0",
     "jquery": "^3.6.0",
     "merge": "^2.1.1",
     "oidc-client": "^1.9.0",
