--- a/CorpusSearch/ClientApp/package.json
+++ b/CorpusSearch/ClientApp/package.json
@@ -17,6 +17,7 @@
     "qs": "^6.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-highlight-words": "^0.18.0",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.4.3",
@@ -36,6 +37,7 @@
     "@types/jest": "^29.2.2",
     "@types/node": "^18.11.9",
     "@types/react-dom": "^18.0.8",
+    "@types/react-helmet": "^6.1.6",
     "@types/react-highlight-words": "^0.16.4",
     "@typescript-eslint/eslint-plugin": "^5.42.1",
     "@typescript-eslint/parser": "^5.42.1",
