Create LoadConfig for fast/minimal loading functionality

--- a/CorpusSearch/appsettings.Development.json
+++ b/CorpusSearch/appsettings.Development.json
@@ -5,5 +5,10 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "Loading": {
+    "OpenDataOnly": false,
+    "VideoOnly": false,
+    "MaxOpenData": 0
   }
 }
