docker: upgrade to .net 8

--- a/CorpusSearch/Dockerfile
+++ b/CorpusSearch/Dockerfile
@@ -1,9 +1,9 @@
-﻿FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS base
+﻿FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
 USER $APP_UID
 WORKDIR /app
 EXPOSE 8080
 
-FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
+FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 # Install Node.js and npm
 RUN rm /bin/sh && ln -s /bin/bash /bin/sh
@@ -21,7 +21,7 @@ RUN dotnet build "CorpusSearch.csproj" -c $BUILD_CONFIGURATION -o /app/build
 WORKDIR /src
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN source ~/.nvm/nvm.sh && dotnet publish "CorpusSearch/CorpusSearch.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN source ~/.nvm/nvm.sh && dotnet publish "CorpusSearch/CorpusSearch.csproj" -c $BUILD_CONFIGURATION -f net8.0 -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
