build: setup docker build
* use /tools/ to ensure they're visible to the Dockerfile

An init script handles ensuring that the data is up to date

--- a/CorpusSearch/CorpusSearch.csproj
+++ b/CorpusSearch/CorpusSearch.csproj
@@ -34,6 +34,15 @@
     <None Update="newdocs">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="tools\download_cregeen.sh">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="tools\download_kelly_m2e.sh">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="tools\init.sh">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
   <ItemGroup>
