fix(ci): permissions for attestation

--- a/.github/workflows/deploy-image.yml
+++ b/.github/workflows/deploy-image.yml
@@ -6,8 +6,10 @@ on:
 #  push:
 #    branches: ['release']
 
+# required for attestation: https://github.com/actions/attest-build-provenance?tab=readme-ov-file#usage
 permissions:
   id-token: write
+  attestations: write
 
 # Defines two custom environment variables for the workflow. These are used for the Container registry domain, and a name for the Docker image that this workflow builds.
 env:
