docs: use 'ghcr' within docker compose
Provides users with a working copy

Can change 'build' to test the docker build process

`manx-corpus-search:master` as we currently don't tag 'latest'

--- a/CorpusSearch/docker-compose.yml
+++ b/CorpusSearch/docker-compose.yml
@@ -1,8 +1,10 @@
 version: '3.7'
+# to execute: `docker-compose up --build`
 services:
   corpus-search:
-    build:
-      dockerfile: Dockerfile
+    image: "ghcr.io/david-allison/manx-corpus-search:master"
+#    build: # builds locally
+#      dockerfile: Dockerfile
     ports:
       - '127.0.0.1:7266:8080'
     volumes:
