build: fix flaky build
`dotnet publish` wanted to build tests
even though they were not necessary

This started occurring after moving to net8.0

```
4.234 /usr/share/dotnet/sdk/8.0.204/Sdks/Microsoft.NET.Sdk/targets/Microsoft.NET.Sdk.targets(284,5): error MSB4018: The "GenerateDepsFile" task failed unexpectedly. [/src/CorpusSearch/CorpusSearch.csproj::TargetFramework=net8.0]
4.234 /usr/share/dotnet/sdk/8.0.204/Sdks/Microsoft.NET.Sdk/targets/Microsoft.NET.Sdk.targets(284,5): error MSB4018: System.IO.IOException: The process cannot access the file '/app/build/CorpusSearch.deps.json' because it is being used by another process. [/src/CorpusSearch/CorpusSearch.csproj::TargetFramework=net8.0]
4.234 /usr/share/dotnet/sdk/8.0.204/Sdks/Microsoft.NET.Sdk/targets/Microsoft.NET.Sdk.targets(284,5): error MSB4018:    at Microsoft.Win32.SafeHandles.SafeFileHandle.Init(String path, FileMode mode, FileAccess access, FileShare share, FileOptions options, Int64 preallocationSize, Int64& fileLength, UnixFileMode& filePermissions) [/src/CorpusSearch/CorpusSearch.csproj::TargetFramework=net8.0]
4.234 /usr/share/dotnet/sdk/8.0.204/Sdks/Microsoft.NET.Sdk/targets/Microsoft.NET.Sdk.targets(284,5): error MSB4018:    at Microsoft.Win32.SafeHandles.SafeFileHandle.Open(String fullPath, FileMode mode, FileAccess access, FileShare share, FileOptions options, Int64 preallocationSize, UnixFileMode openPermissions, Int64& fileLength, UnixFileMode& filePermissions, Boolean failForSymlink, Boolean& wasSymlink, Func`4 createOpenException) [/src/CorpusSearch/CorpusSearch.csproj::TargetFramework=net8.0]
4.234 /usr/share/dotnet/sdk/8.0.204/Sdks/Microsoft.NET.Sdk/targets/Microsoft.NET.Sdk.targets(284,5): error MSB4018:    at System.IO.Strategies.OSFileStreamStrategy..ctor(String path, FileMode mode, FileAccess access, FileShare share, FileOptions options, Int64 preallocationSize, Nullable`1 unixCreateMode) [/src/CorpusSearch/CorpusSearch.csproj::TargetFramework=net8.0]
4.234 /usr/share/dotnet/sdk/8.0.204/

--- a/CorpusSearch.Test/CorpusSearch.Test.csproj
+++ b/CorpusSearch.Test/CorpusSearch.Test.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
 
     <IsPackable>false</IsPackable>
+    <IsPublishable>false</IsPublishable>
 
     <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
